--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_SITE_NAME = "白泽的工作间"
 VITE_SITE_ANTHOR = "白泽"
 VITE_SITE_KEYWORDS = "白泽,工作间"
 VITE_SITE_DES = "来自白泽的工作间"
-VITE_SITE_URL = "http://myhome.xn--sxwp6r.icu/"
+VITE_SITE_URL = "myhome.白泽icu"
 VITE_SITE_LOGO = "/images/icon/favicon.ico"
 VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png"
 
