--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_SITE_NAME = "白泽的工作间"
 VITE_SITE_ANTHOR = "白泽"
 VITE_SITE_KEYWORDS = "白泽,工作间"
 VITE_SITE_DES = "来自白泽的工作间"
-VITE_SITE_URL = "白泽的工作间"
+VITE_SITE_URL = "白泽.icu"
 VITE_SITE_LOGO = "/images/icon/favicon.ico"
 VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png"
 
@@ -12,8 +12,8 @@ VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png"
 VITE_SITE_BAIDUTONGJI = ""
 
 # 简介文本
-VITE_DESC_HELLO = "Hello，my friends! !"
-VITE_DESC_TEXT = "一个建立于 21 世纪的小站，存活于互联网的边缘"
+VITE_DESC_HELLO = "welcome my friends! !"
+VITE_DESC_TEXT = "建立于二十一世纪，游走于互联网边缘"
 VITE_DESC_HELLO_OTHER = "Oops !"
 VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
 
