--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_SITE_NAME = "白泽的工作间"
 VITE_SITE_ANTHOR = "白泽"
 VITE_SITE_KEYWORDS = "白泽,工作间"
 VITE_SITE_DES = "来自白泽的工作间"
-VITE_SITE_URL = "白泽.icu"
+VITE_SITE_URL = "baize.host"
 VITE_SITE_LOGO = "/images/icon/favicon.ico"
 VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png"
 
@@ -13,7 +13,7 @@ VITE_SITE_BAIDUTONGJI = ""
 
 # 简介文本
 VITE_DESC_HELLO = "welcome my friends! !"
-VITE_DESC_TEXT = "建立于二十一世纪，游走于互联网边缘"
+VITE_DESC_TEXT = "欢迎来到我的小站(๑ゝω╹๑)"
 VITE_DESC_HELLO_OTHER = "Oops !"
 VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
 
