--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ VITE_SITE_START = "2023-05-30"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
-VITE_SITE_ICP = "豫ICP备2023011505号"
+VITE_SITE_ICP = "萌ICP备20234949号"
 
 # 歌曲 API 地址
 ## 请参照 https://github.com/xizeyoupan/Meting-API#deno-deploy 进行 API 服务部署
